--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Library</title>
-    <link rel="stylesheet" href='LibStyle.css'>
+    <link rel="stylesheet" href='Documents/LibStyle.css'>
     <title>My library</title>
 </head>
 <body>
@@ -63,6 +63,6 @@
 
 </body>
 
-<script src="Library.js"></script>
+<script src="Documents/Library.js"></script>
 
 </html>
